# Parallel-Mergesort

./: README.md  main.cpp  mergesort.hpp
cmake/Modules/: FindmyPMSort.cmake
lib/: CMakeLists.txt  myPMSort.hpp
